crates/cli/tests/snapshots/snapshot_tests__compact_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
unused-file:src/dead.ts
unused-export:src/utils.ts:10:helperFn
unused-type:src/types.ts:5:OldType
unused-dep:lodash
unused-devdep:jest
unused-optionaldep:fsevents
unused-enum-member:src/enums.ts:8:Status.Deprecated
unused-class-member:src/service.ts:42:UserService.legacyMethod
unresolved-import:src/app.ts:3:./missing-module
unlisted-dep:chalk
duplicate-export:Config
type-only-dep:zod
test-only-dep:msw
circular-dependency:src/a.ts:3:src/a.ts → src/b.ts → src/a.ts
re-export-cycle:src/api/index.ts:src/api/index.ts <-> src/api/internal/index.ts
invalid-client-export:app/page.tsx:3:metadata (from "use client")
mixed-client-server-barrel:app/components/index.ts:2 (client "./Button", server "./fetchUser")
unused-catalog-entry:pnpm-workspace.yaml:6:default:is-even
unused-catalog-entry:pnpm-workspace.yaml:12:legacy:old-thing
empty-catalog-group:pnpm-workspace.yaml:10:react17
unresolved-catalog-reference:packages/app/package.json:14:react17:old-react
unused-dependency-override:pnpm-workspace.yaml:9:pnpm-workspace.yaml:axios
misconfigured-dependency-override:package.json:3:package.json:@types/react@<<18
