crates/cli/tests/snapshots/snapshot_tests__compact_re_export_cycles_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
assertion_line: 1864
expression: "lines.join(\"\\n\")"
---
re-export-cycle:src/api/index.ts:1:0:src/api/index.ts <-> src/api/internal/index.ts
re-export-cycle:src/utils/index.ts:1:0:src/utils/index.ts (self-loop)
